--- a/WishList/Views/Account/Register.cshtml
+++ b/WishList/Views/Account/Register.cshtml
@@ -1,1 +1,24 @@
 ﻿@model WishList.Models.AccountViewModels.RegisterViewModel
+
+    <h3>Registere New User</h3>
+<form asp-action="Register">
+    <div class="text-danger"></div>
+    <dvi>
+        <label></label>
+        <br/>
+        <input/>
+    </dvi>
+    <div>
+        <label></label>
+        <br/>
+        <input/>
+    </div>
+    <div>
+        <label></label>
+        <br/>
+        <input/>
+    </div>
+    <div>
+        <button type="submit">Register User</button>    
+    </div>
+</form>
