--- a/WishList/Views/Home/Index.cshtml
+++ b/WishList/Views/Home/Index.cshtml
@@ -1,4 +1,8 @@
-﻿<h1>Welcome!</h1>
+﻿@using Microsoft.AspNetCore.Identity
+@using WishList.Models
+@model SignInManager<ApplicationUser>
+
+<h1>Welcome!</h1>
 
 <div>
     <a asp-action="Index" asp-controller="Item">View wishlist</a>
