--- a/WishList/Views/Home/Index.cshtml
+++ b/WishList/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using WishList.Models
-@inject SignInManager<ApplicationUser> SingInManager
+@inject SignInManager<ApplicationUser> SignInManager
 
 <h1>Welcome!</h1>
 
@@ -8,7 +8,7 @@
     <a asp-action="Index" asp-controller="Item">View wishlist</a>
 </div>
 
-@if (Model.SignInManager.IsSignedIn(User))
+@if (SignInManager.IsSignedIn(User))
 {
     <div>
         <form asp-action="Logout" asp-controller="Account" method="post">
